# codec-cortex

./: .coverage  .coveragerc  .gitignore  .gitleaks.toml  AGENT_HANDOFF.md  AUTHORS.md  CERTIFICATION_REPORT.md  CHANGELOG.md  CITATION.cff  CODEC_CORTEX_LEARNING_ENGINE_SPEC.md  CONTRIBUTING.md  GOVERNANCE.md  INFORME_DE_ENTREGA_v0.3.5_E3.md  Makefile  PHASE0_FREEZE_NOTICE.md  README.md  README_INSTALL.md  ROADMAP.md  STATUS.md  alfred-memory.cortex  alfred-memory.md  brain.cortex  brain.md  grammar  pyproject.toml  rev-report.json  setup.sh  spec  summary.cortex  summary.md
.arqux/: brain.cortex  brain.cortex.bak  learn-policies.cortex
.github/: AWESOME-LIST-PRs.md  CODEOWNERS
benchmarks/: README.md
certification/: compatibility-report.json
cli/: .coverage  BENCHMARK.md  CHANGELOG.md  EQUIVALENCE.md  ERRORS.md  INFORME_DE_ENTREGA_v2.3.1.md  PACKAGING.md  README.md  STATUS.md  VIEW_SCHEMA.md  pyproject.toml
cli/scripts/: cortex_demo_v1_1_2.sh  cortex_demo_v1_1_4.sh  cortex_demo_v1_1_5.sh  cortex_demo_v1_1_6.sh  cortex_demo_v1_1_7.sh  cortex_demo_v1_1_8.sh  cortex_demo_v1_1_9.sh
cli/src/cortex/: __init__.py  __main__.py  _version.py
cli/src/cortex/audit/: __init__.py  logger.py
cli/src/cortex/cli/: __init__.py  main.py  main_e3.py
cli/src/cortex/cli/commands/: __init__.py  add.py  audit.py  benchmark.py  compile.py  delete.py  diagram.py  diff.py  docstring.py  doctor.py  format.py  get.py  glossary.py  list.py  micro.py  move.py  new.py  recover.py  render.py  update.py  v2_canonicalize.py  v2_compare.py  v2_convert.py  v2_explain_loss.py  v2_inspect.py  v2_roundtrip.py  v2_roundtrip_bidir.py  v2_verify_view.py  verify.py
cli/src/cortex/core/: __init__.py  ast.py  compare.py  document_kind.py  errors.py  lexer.py  modes.py  parser.py  repair.py  schema.py  validator.py  writer.py
cli/src/cortex/crud/: __init__.py  mutations.py  selectors.py  transactions.py
cli/src/cortex/glossary/: __init__.py  contracts.py  minimal.py  model.py  resolver.py
cli/src/cortex/hcortex/: __init__.py  edit_parser.py  edit_renderer.py  markdown_model.py  profiles.py  read_renderer.py  recovery.py
cli/src/cortex/learning/: __init__.py  candidates.py  cli.py  conditions.py  decay.py  elevation.py  errors.py  index.py  policy.py  policy_defaults.py  scoring.py  session_cli.py  workspace.py
cli/src/cortex/security/: __init__.py  secret_scanner.py  signature.py
cli/src/cortex/templates/: __init__.py  brain.py  minimal_glossary.py  package.py  skill.py
cli/src/cortex/v2/: __init__.py  diagnostics.py  encoder.py  equivalence.py  hcortex_parser.py  hcortex_renderer.py  ir.py  parser.py  view.py  view_renderer.py  writer.py
cli/src/tests/: conftest.py  test_acceptance.py  test_audit_gates.py  test_blp005_one_line.py  test_crud.py  test_e2_audit.py  test_e2_modes.py  test_e2_secret_scanner.py  test_e2_signature.py  test_e3_benchmark.py  test_e3_docstring.py  test_errors.py  test_fixtures.py  test_learning_engine.py  test_local_glossary_sigils.py  test_reaudit_gates.py  test_v1_1_2_fixes.py  test_v1_1_3_fixes.py  test_v1_1_4_fixes.py  test_v1_1_5_fixes.py  test_v1_1_6_fixes.py  test_v1_1_7_fixes.py  test_v1_1_8_fixes.py  test_v1_1_9_fixes.py  test_v2_1_fixes.py  test_v2_2_1_fixes.py  test_v2_2_2_fixes.py  test_v2_2_3_fixes.py  test_v2_2_view.py  test_v2_3_0_acceptance.py  test_v2_roundtrip.py
cli/src/tests/fixtures/: SKILL_v2.cortex.md  SKILL_v2.hcortex.md  multi_entry_semantic.cortex
cli/src/tests/invalid/: unbalanced_braces.cortex
codec-cortex-bash/: CHANGELOG.md  LICENSE  MANIFEST.sha256  Makefile  README.md  conformance-report.json  install.sh  validation-report.json
codec-cortex-go/: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  go.mod
codec-cortex-node/: ARTIFACT-MANIFEST.json  LICENSE  NOTICE.md  PARITY-REPORT.json  README.md  package.json  rev-report-node.json
codec-cortex-rs/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILE_MANIFEST.sha256  MIGRATION.md  Makefile  README.md  SECURITY.md  SOURCE_MANIFEST.json  VERIFICATION_REPORT.json  rustfmt.toml
codec-cortex-rs/.github/workflows/: ci.yml
codec-cortex-rs/docs/: ARCHITECTURE.md  EQUIVALENCE.md  KNOWN-PARITY-LIMITATIONS.md  VERIFICATION.md
codec-cortex-rs/examples/: full.canonical.cortex  full.cortex  full.hcortex.md  full.reference.json
codec-cortex-rs/src/: c14n.rs  error.rs  harness.rs  hcortex.rs  lib.rs  main.rs  model.rs  parser.rs  scalars.rs  slotparser.rs
codec-cortex-rs/tests/: api_contract.rs  reference_parity.rs  slotparser.rs
codec-cortex-rs/tests/fixtures/: roundtrip.canonical.cortex  roundtrip.cortex  roundtrip.hcortex.md  roundtrip.reference.json
codec-cortex-rs/tools/: differential.py
codec_cortex/: __init__.py  __main__.py  c14n.py  dispatcher.py  harness.py  hcortex.py  parser.py  scalars.py  slotc14n.py  slotharness.py  slothcortex.py  slotmigrate.py  slotparser.py  slots.py
conformance/: README.md  manifest.json
docs/: CERTIFICATION_REPORT.md  PATCH_SUMMARY.md  QUICKSTART.md  README.md  README_INSTALL.md  ROADMAP.md  auditoria-coherencia-integral-2026-07-10.md  index.md  parser-api.md
examples/: expected-ast  expected-diagnostics  invalid  manifest.json  valid
experiments/: corpus  vectors
governance/: DEPENDENCY_POLICY.md  GOVERNANCE.md  dependency-policy.json
profiles/: README.md
release/: CLAIMS.cortex  COMPATIBILITY.cortex  FINDINGS.cortex  STATUS.cortex
reports/: license-transition-report.md
scripts/: ccx_probes.py  check_version_truth.py  install_local.sh  run_regression.sh
security/: SECURITY.md  THREAT_MODEL.md
skill/: AGENT.cortex  AGENT.en.md  AGENT.md  SKILL.cortex  SKILL.en.md  SKILL.md  brain.cortex  codec-cortex.skill.md
standard/: CORTEX-CONSTITUTION.md  SHA256SUMS.txt
tests/: conftest.py  test_blp005_one_line.py  test_cli_output.py  test_crud.py  test_document_handle.py  test_e2_modes.py  test_learning_engine_v02.py  test_reaudit_gates.py  test_schema_resolver_hardening.py  test_selectors_hardening.py  test_v1_1_3_fixes.py  test_v1_1_4_fixes.py  test_v1_1_8_fixes.py  test_v2_2_2_fixes.py  test_v2_2_3_fixes.py  (+2 more)
(+1946 files in other folders)
