[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codec-cortex"
version = "1.1.9"
description = "CODEC-CORTEX CLI — modular deterministic processor for .cortex files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fidel Ernesto Lozada A." }]
keywords = ["cortex", "codec", "memory", "cli", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.scripts]
cortex = "cortex.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "cortex",
    "cortex.cli",
    "cortex.cli.commands",
    "cortex.core",
    "cortex.glossary",
    "cortex.hcortex",
    "cortex.crud",
    "cortex.templates",
]

[tool.setuptools.package-data]
cortex = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Make src/ importable so `import cortex` works in tests
pythonpath = ["src"]
