[package]
name = "codec-cortex"
version = "1.0.0-rc.1"
edition = "2021"
publish = false
description = "Functional Rust port of CORTEX 0.1, C14N-0.1 and HCORTEX-0.1"
keywords = ["cortex", "codec", "canonicalization", "hcortex", "llm"]
categories = ["parser-implementations", "encoding", "command-line-utilities"]

[lib]
name = "codec_cortex"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-normalization = "0.1"

